--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent ">
           <ul class="navbar-nav ml-auto ">
             <li class="nav-item ">
-              <a class="nav-link" href="">Contact</a>
+              <a class="nav-link" href="#footer">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Pricing</a>
+              <a class="nav-link" href="#pricing">Pricing</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Download</a>
+              <a class="nav-link" href="#cta">Download</a>
             </li>
           </ul>
         </div>
@@ -232,9 +232,10 @@
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <h3 class="cta-text">Find the True Love of Your Dog's Life Today.</h3>
+    <button type="button" class="btn btn-dark btn-lg download-btn"><i class="fab fa-apple"></i>Download</button>
+    <button type="button" class="btn btn-light btn-lg download-btn"><i class="fab fa-google-play"></i>Download</button></button>
+
 
   </section>
 
@@ -242,8 +243,11 @@
   <!-- Footer -->
 
   <footer id="footer">
-
-    <p>© Copyright 2018 TinDog</p>
+<i class="fab fa-facebook-f footer-icon"></i>
+<i class="fab fa-twitter footer-icon"></i>
+<i class="fab fa-instagram-square footer-icon"></i>
+<a href="https://fabbiety.github.io/css_cv/" <i   class="fas fa-envelope footer-icon"> </i> </a> 
+    <p>© Copyright 2021 TinDog</p>
 
   </footer>
 
