--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
   <!-- Press -->
 
   <section id="press">
-    <img class="press-icon" src="images/techcrunch.png" alt="tc-logo">
+    <img class="press-icon" src="images/techCrunch.png" alt="tc-logo">
     <img class="press-icon" src="images/tnw.png" alt="tnw-logo">
     <img class="press-icon" src="images/bizinsider.png" alt="biz-insider-logo">
     <img class="press-icon" src="images/mashable.png" alt="mashable-logo">
@@ -246,7 +246,7 @@
 <i class="fab fa-facebook-f footer-icon"></i>
 <i class="fab fa-twitter footer-icon"></i>
 <i class="fab fa-instagram-square footer-icon"></i>
-<a href="https://fabbiety.github.io/css_cv/" <i   class="fas fa-envelope footer-icon"> </i> </a> 
+<a href="https://fabbiety.github.io/css_cv/" <i   class="fas fa-envelope footer-icon"> </i> </a>
     <p>© Copyright 2021 TinDog</p>
 
   </footer>
